testsuites/LLT/compiler/Diagnose/lex_test/lex_unterminated_multi_line_string/case9.expect.out
error: unterminated single-line string
  ==> case9.cj:17:14:
   | 
17 |     cangjie3 ${ "
   |                 ^^ unterminated single-line string
   | 
   # note: consider using multi-line string if you intended to include '\n' in string

1 error generated, 1 error printed.
